--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,6 +1,14 @@
 <div class="row">
-  <div class="large-12 columns">
+  <div class="large-8 columns">
     <h1><img src="assets/img/monicapowelllogo.svg" width=200></h1>
+  </div>
+  <div class="large-4 columns">
+    <div class="topnav" id="myTopnav">
+    <a href="#home">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
   </div>
 </div>
 
@@ -8,7 +16,7 @@
 
 <div class="hero-section">
   <div class="hero-section-text">
-  
+
     <!-- <h1>Hi, My name is Monica!</h1>
     <h5>Welcome to my home on the internet.</h5> -->
   </div>
@@ -75,6 +83,12 @@ Collaborating with you on a digital product.
     <!-- </div> -->
   </div>
 </div>
+
+<div class="row">
+  <div class="large-12 columns">
+    <h3>Connect on social</h3>
+</div>
+</div>
 <!--
 <div class="row">
   <div class="large-8 medium-8 columns">
@@ -82,6 +96,9 @@ Collaborating with you on a digital product.
     <!-- Grid Example -->
 
     <hr />
+
+
+
 
     <div class="row">
       <div class="large-12 columns">
