--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,10 +4,11 @@
   </div>
   <div class="large-4 columns">
     <div class="topnav" id="myTopnav">
-    <a href="#home">Home</a>
-    <a href="#news">News</a>
+      <a href="#about">About</a>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#portfolio">Resume</a>
     <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+
   </div>
   </div>
 </div>
