started working on alt index page w/o large header image and with more icons

--- a/src/pages/index-v2.html
+++ b/src/pages/index-v2.html
@@ -1,21 +1,61 @@
-<div class="row">
-  <div class="large-8 columns">
+<div class="row" id="navigation">
+  <!-- <div class="large-8 columns">
     <h1><a href="#" style="border: none;"><img src="assets/img/monicapowelllogo.svg" width=200></a></h1>
-  </div>
-  <div class="large-4 columns">
-    <div class="topnav" id="myTopnav">
+  </div> -->
+  <div class="large-12 columns">
+    <nav class="paradeiser">
+      <h1><a href="#" style="border: none;"><img src="assets/img/monicapowelllogo.svg" width=200></a></h1>
+
+    <!-- <a href="#">
+        <img src="logo.png" alt="Logo" class="paradeiser_logo">
+    </a> -->
+    <a href="#">
+        <div class="paradeiser_icon_canvas">
+          <i class="fal fa-rocket fa-2x"></i>
+        </div>
+        <span>Skills</span>
+    </a>
+    <a href="#">
+        <div class="paradeiser_icon_canvas">
+            <i class="fal fa-code fa-2x"></i>
+        </div>
+        <span>Work</span>
+    </a>
+
+    <!-- paste in as many links as you want -->
+
+    <!-- and include the dropdown aswell -->
+    <div class="paradeiser_dropdown">
+        <a href="#paradeiser-more" id="paradeiser-dropdown">
+            <div class="paradeiser_icon_canvas">
+                <img src="img/menu_overflow.svg" alt="">
+            </div>
+            <span>More</span>
+        </a>
+        <ul class="paradeiser_children" id="paradeiser-more">
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Yolo</a></li>
+            <li class="paradeiser-hidden-desktop"><a href="#">Hidden on desktop</a></li>
+            <li class="paradeiser-hidden-tablet"><a href="#">Hidden on tablet</a></li>
+            <li class="paradeiser-hidden-phone"><a href="#">Hidden on phone</a></li>
+            <li id="greybox"><a href="#!"></a></li>
+        </ul>
+    </div>
+</nav>
+    <!-- <div class="topnav" id="myTopnav">
 
     <a href="#portfolio">Work</a>
     <a href="#resume">Resume</a>
     <a href="#contact">Contact</a>
 
-  </div>
+  </div> -->
   </div>
 </div>
 
 
 
-<div class="hero-section">
+<div class="not-hero-section">
   <div class="hero-section-text">
 
     <!-- <h1>Hi, My name is Monica!</h1>
@@ -28,11 +68,17 @@
   <div class="large-12 columns">
 
 <div class="row">
+  <div class="large-2 columns">
+      <center>  <img src="assets/img/monicaoncomputer.svg" width=200></center>
+  </div>
 
-  <div class="large-8 columns">
+
+  <div class="large-10 columns">
+
+
     &nbsp;
   <h3>Hi, I'm <span class="purple-text">Monica</span>!</h3>
-    <p id="intro-paragraph">    <span class="firstcharacter">I</span> am NYC-based <span class="underline-flair">web developer</span> who is passionate about creating a more enjoyable and accessible digital products. Currently, I lead e-mail marketing at Jopwell and write <a href="http://www.datalogues.com/">Datalogues</a>.
+    <p id="intro-paragraph">    <span class="firstcharacter">I</span> am NYC-based <span class="underline-flair">web developer</span> who is passionate about creating a more enjoyable digital products. Currently, I lead e-mail marketing at Jopwell and write <a href="http://www.datalogues.com/">Datalogues</a>.
     <span class="previousgrey">Previously, I wrangled data at Columbia's J-School and founded the Athena Digital Design Agency, a student-run web development agency at Barnard College. </span></p>
 
     <p><span class="purple-text">Interested in collaborating?</span> Please send me a note at <a href="mailto:monica@aboutmonica.com">Monica@AboutMonica.com</a></p>
@@ -58,7 +104,30 @@
   </div>
 
 
-      <div class="large-4 columns">
+
+</div>
+
+<hr />
+<div class="row">
+
+      <div class="large-6 columns">
+
+       <!-- <h3> Relevant Links</h3>
+        <ul>
+          <li><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Resume</li>
+          <li><i class="fa fa-lightbulb-o" aria-hidden="true"></i> Portfolio</li>
+          <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> About</li>
+        </ul> -->
+        &nbsp;
+     <h3>Writing</h3>
+
+
+
+
+      </div>
+
+
+      <div class="large-6 columns">
 
        <!-- <h3> Relevant Links</h3>
         <ul>
@@ -70,15 +139,12 @@
      <h3>Ask me about...</h3>
 
         Jira, ZenDesk, Command line, Git, Wordpress, Sketch and Adobe Creative Cloud (Photoshop, InDesign and Illustrator)</p>
-  <hr />
+    <hr />
          Python (Jupyter/IPython Notebooks, Pandas, Pelican, Beautiful Soup), JavaScript, HTML/CSS, SQL and Java</p>
-<!--
-<hr />
-Collaborating with you on a digital product. -->
+    <!--
+    <hr />
+    Collaborating with you on a digital product. -->
       </div>
-
-
-
 
 </div>
 
