added section for recent writing, distinct CTA and different rows have different colors

--- a/src/pages/index-v2.html
+++ b/src/pages/index-v2.html
@@ -81,7 +81,7 @@
     <p id="intro-paragraph">    <span class="firstcharacter">I</span> am NYC-based <span class="underline-flair">web developer</span> who is passionate about creating a more enjoyable digital products. Currently, I lead e-mail marketing at Jopwell and write <a href="http://www.datalogues.com/">Datalogues</a>.
     <span class="previousgrey">Previously, I wrangled data at Columbia's J-School and founded the Athena Digital Design Agency, a student-run web development agency at Barnard College. </span></p>
 
-    <p><span class="purple-text">Interested in collaborating?</span> Please send me a note at <a href="mailto:monica@aboutmonica.com">Monica@AboutMonica.com</a></p>
+
 
 
 
@@ -107,8 +107,10 @@
 
 </div>
 
-<hr />
-<div class="row">
+<div class="row cta">    <p><span class="purple-text">Interested in collaborating?</span> Please send me a note at <a href="mailto:monica@aboutmonica.com">Monica@AboutMonica.com</a></p></div>
+
+
+<div class="row skills">
 
       <div class="large-6 columns">
 
@@ -119,10 +121,13 @@
           <li><i class="fa fa-hand-o-right" aria-hidden="true"></i> About</li>
         </ul> -->
         &nbsp;
-     <h3>Writing</h3>
+     <h3>Latest Writing</h3>
+<p><a href="https://medium.freecodecamp.org/conquering-the-command-line-f85f5e46c07c" target="_blank">Conquering the Command Line</a> <em>A brief guide to getting started on UNIX/Mac OS terminal</em></p>
+<!-- <p><a href="https://code.likeagirl.io/what-i-learnt-from-attending-a-gender-inclusive-tech-conference-f222f7031512">What I learned from attending a Gender Inclusive Tech Conference</a> <em>Key lessons on self-care, growth and amplifying your voice</em></p> -->
 
+<p><a href="https://hackernoon.com/how-to-change-repo-language-in-github-c3e07819c5bb" target="_blank">How to Change The Detected Repository Language on GitHub</a> <em>Is GitHub telling you that your repository is 98.9% CSS or HTML when it isn’t? Here’s how to resolve that issue every time.</em></p>
 
-
+<p><a href="http://www.datalogues.com/using-tmdb-api" target="_blank">How to Use the TMDB API to Find Films with the Highest Revenue</a> <em>A python tutorial for exploring the TMDB API</em></p>
 
       </div>
 
@@ -138,9 +143,10 @@
         &nbsp;
      <h3>Ask me about...</h3>
 
+          Python (Jupyter/IPython Notebooks, Pandas, Pelican, Beautiful Soup), JavaScript, HTML/CSS, SQL and Java</p>
+ <hr />
         Jira, ZenDesk, Command line, Git, Wordpress, Sketch and Adobe Creative Cloud (Photoshop, InDesign and Illustrator)</p>
-    <hr />
-         Python (Jupyter/IPython Notebooks, Pandas, Pelican, Beautiful Soup), JavaScript, HTML/CSS, SQL and Java</p>
+
     <!--
     <hr />
     Collaborating with you on a digital product. -->
