updated to remove scroll bar and white space ot the right, also debugged social icons and made them stand out more

--- a/src/pages/index-v2.html
+++ b/src/pages/index-v2.html
@@ -85,7 +85,7 @@
 <p><a href="https://medium.freecodecamp.org/conquering-the-command-line-f85f5e46c07c" target="_blank">Conquering the Command Line</a> <em>A brief guide to getting started on UNIX/Mac OS terminal</em></p>
 <!-- <p><a href="https://code.likeagirl.io/what-i-learnt-from-attending-a-gender-inclusive-tech-conference-f222f7031512">What I learned from attending a Gender Inclusive Tech Conference</a> <em>Key lessons on self-care, growth and amplifying your voice</em></p> -->
 
-<p><a href="https://hackernoon.com/how-to-change-repo-language-in-github-c3e07819c5bb" target="_blank">How to Change The Detected Repository Language on GitHub</a> <em>Is GitHub telling you that your repository is 98.9% CSS or HTML when it isn’t? Here’s how to resolve that issue every time.</em></p>
+<p><a href="https://hackernoon.com/how-to-change-repo-language-in-github-c3e07819c5bb" target="_blank">How to Change The Detected Repository Language on GitHub</a> <em>Here's the correct way to change the programming language that GitHub detects</em></p>
 
 <p><a href="http://www.datalogues.com/using-tmdb-api" target="_blank">How to Use the TMDB API to Find Films with the Highest Revenue</a> <em>A python tutorial for exploring the TMDB API</em></p>
 
