re-did portfolio section, misc. styling updates (for e.g., button styling)

--- a/src/pages/index-v2.html
+++ b/src/pages/index-v2.html
@@ -2,41 +2,40 @@
 
   <div class="large-12 columns">
     <nav class="paradeiser">
-      <h1><a href="#" style="border: none;"><img src="assets/img/monicapowelllogo.svg" width=200></a></h1>
+      <h1><a href="#" style="border: none;"><img src="assets/img/monicapowelllogo.svg" width=200 alt="monica powell typeface logo"></a></h1>
 
 
-    <a href="#">
+    <a href="#work">
         <div class="paradeiser_icon_canvas">
           <i class="fal fa-rocket fa-2x"></i>
-        </div>
-        <span>Skills</span>
-    </a>
-    <a href="#">
-        <div class="paradeiser_icon_canvas">
-            <i class="fal fa-code fa-2x"></i>
         </div>
         <span>Work</span>
     </a>
 
 
-    <!-- and include the dropdown aswell -->
-    <div class="paradeiser_dropdown">
-        <a href="#paradeiser-more" id="paradeiser-dropdown">
-            <div class="paradeiser_icon_canvas">
-                <img src="img/menu_overflow.svg" alt="">
-            </div>
-            <span>More</span>
-        </a>
-        <ul class="paradeiser_children" id="paradeiser-more">
-            <li><a href="#">Terms of Service</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Yolo</a></li>
-            <li class="paradeiser-hidden-desktop"><a href="#">Hidden on desktop</a></li>
-            <li class="paradeiser-hidden-tablet"><a href="#">Hidden on tablet</a></li>
-            <li class="paradeiser-hidden-phone"><a href="#">Hidden on phone</a></li>
-            <li id="greybox"><a href="#!"></a></li>
-        </ul>
-    </div>
+    <a href="#work">
+        <div class="paradeiser_icon_canvas">
+          <i class="fal fa-file fa-2x"></i>
+
+        </div>
+        <span>Resume</span>
+    </a>
+
+    <a href="https://github.com/M0nica" target="_blank">
+        <div class="paradeiser_icon_canvas">
+            <i class="fab fa-github fa-2x"></i>
+        </div>
+
+    </a>
+
+    <a href="https://twitter.com/waterproofheart" target="_blank">
+        <div class="paradeiser_icon_canvas">
+            <i class="fab fa-twitter fa-2x"></i>
+        </div>
+
+    </a>
+
+  
 </nav>
 
   </div>
@@ -54,7 +53,7 @@
 
 <div class="row">
   <div class="large-2 columns">
-      <center>  <img src="assets/img/monicaoncomputer.svg" width=200></center>
+      <center>  <img src="assets/img/monicaoncomputer.svg" width=200 alt="svg of monica on computer"></center>
   </div>
 
 
@@ -72,7 +71,15 @@
 
 </div>
 
-<div class="row cta">  <div class="large-12 columns">    <p><span class="purple-text">Interested in collaborating?</span> Please send me a note at <a href="mailto:monica@aboutmonica.com">Monica@AboutMonica.com</a></p></div></div>
+<div class="row cta-email">
+
+    <div class="large-12 columns">
+        <p><span class="purple-text">
+          Interested in collaborating?</span>
+           Please send me a note at <a href="mailto:monica@aboutmonica.com">Monica@AboutMonica.com</a>
+         </p>
+       </div>
+     </div>
 
 
 <div class="row skills">
@@ -89,6 +96,7 @@
 
 <p><a href="http://www.datalogues.com/using-tmdb-api" target="_blank">How to Use the TMDB API to Find Films with the Highest Revenue</a> <em>A python tutorial for exploring the TMDB API</em></p>
 
+<p><a href="https://medium.com/@monica_" target="_blank">Read More...</a></p>
       </div>
 
 
@@ -96,31 +104,91 @@
 
 
 
-    <hr />
+    <!-- <hr /> -->
 
 
+<div class="row cta-github">  <div class="large-12 columns">  <p><span class="" id="work"> Check out my <a href="https://www.github.com/m0nica">GitHub</a> or <a href="/resume.pdf" target="_blank">view my resume</a>!</span></p></div></div>
         <div class="row">
           <div class="large-12 columns">
 
-            <h3>Portfolio</h3>
-
-            <div class="row">
-              <div class="large-6 columns tint"><img src="assets/img/datalogues-preview.png" alt="Datalogues - Development and Content">
-
-              Datalogues</div>
-
-              <div class="large-6 columns tint"><img src="assets/img/megha-header-screenshot.png"></div>
+            <h3>Web Development</h3>
 
 
-            </div>
-            </div>
-            <div class="row">
-            <div class="large-6 columns tint"><img src="assets/img/about-monica-old.png"></div>
-          <div class="large-6 columns tint">5 Placeholder</div>
 
-      </div>
+
+    <div class="row small-up-1 medium-up-2 large-up-2">
+  <div class="column column-block">
+    <img src="assets/img/megha-header-screenshot-cropped-16-9-ratio.png" class="thumbnail" alt="">
+    <p class="description">A fully-responsive, personal branding website created with <span class="skill">  HTML/CSS/JavaScript </span> and integrated with a <span class="skill">Content Management System</span>.
+
+
+</p>
+
+<a href="http://www.MeghaSDesai.com" class="button">View Website</a>
+     </div>
+
+
+  <div class="column column-block">
+    <img src="assets/img/datalogues-preview-cropped-16-9-ratio.png" class="thumbnail" alt="">
+    <p class="description">A customized-<span class="skill">Jekyll</span> blog with educational <span class="skill">Jupyter notebooks</span> converted to <span class="skill">Markdown</span> to provide tutorials in <span class="skill">Python</span> with topics ranging from <span class="skill">Pandas</span> to <span class="skill">Matplotlib</span> to <span class="skill">APIs</span> to <span class="skill"> GitHub</span> and more.  </p>
+
+    <a href="#" class="button">View on Github</a>
+    <a href="#" class="button">View Website</a>
+  </div>
+
+
+  <div class="column column-block">
+    <img src="assets/img/about-monica-old-cropped-16-9-ratio.png" class="thumbnail" alt="">
+        <p class="description">A fully-responsive, portfolio created with <span class="skill"> HTML</span>, <span class="skill"> CSS </span>, <span class="skill"> JavaScript </span> and <span class="skill"> PHP</span>. </p>
+          <a href="#" class="button">View on Github</a>
+          <a href="#" class="button">View Website</a>
+  </div>
+
+
+
+  <div class="column column-block">
+    <img src="assets/img/shiny_wordcloud-cropped-16-9-ratio.png" class="thumbnail" alt="">
+<p class="description"><span class="skill"> R Shiny</span> wordcloud of tweets collected during the 2016 U.S. Presidential Election. Part of a larger project to analyze
+over 13 million tweets during the election. </p>
+<a href="#" class="button">View on Github</a>
+
+  </div>
+
+
+
+</div>
+
+<div class="row design-quote">  <div class="large-12 columns">  <p><span class=""><i class="fas fa-quote-left"></i>
+
+
+
+You <em>can't</em> use up creativity. The more you use, the more you have. <i class="fas fa-quote-right"></i>
+<br>
+― Maya Angelou</span></p></div></div>
+
+  <div class="row small-up-1 medium-up-2 large-up-2">
+
+<div class="column column-block">
+
+    <div class="fotorama" data-width="940" data-height="505" data-arrows="true" data-click="true" data-swipe="false" data-loop="true" o data-autoplay="3000" data-allowfullscreen="true" data-transition="crossfade">
+      <img src="assets/img/jeninniwindowlogo.jpg" alt="Jeninni Logo">
+      <img src="assets/img/aidaposter.jpg" alt="Aida Poster">
+      <img src="assets/img/desaidonorcard.jpg" alt="Desai Donor Card">
+      <img src="assets/img/thcflyer.jpg" alt="There is Hope Campaign Flyer">
+      <img src="assets/img/colorfulkinks.png" alt="Colorful Kinks Logo">
+      <img src="assets/img/ceslogo.png" alt="Capitol Event Stylist Logo">
+    </div>
+  </div>
+
+<div class="column column-block">
+    <h3>Graphic Design</h3> Promotional and branding material designed with various Adobe Creative Cloud products (e.g., Adobe Photoshop, Adobe Illustrator and Adobe InDesign) and Sketch.
+  </div>
+</div>
+</div>
+
+
 
 
 
           </div>
-        <!-- </div> -->
+        </div>
