moved resume pdf to assets folder and updated links to resume

--- a/src/pages/index-v2.html
+++ b/src/pages/index-v2.html
@@ -13,7 +13,7 @@
     </a>
 
 
-    <a href="#work">
+    <a href="assets/resume.pdf" target="_blank">
         <div class="paradeiser_icon_canvas">
           <i class="fal fa-file fa-2x"></i>
 
@@ -35,7 +35,7 @@
 
     </a>
 
-  
+
 </nav>
 
   </div>
@@ -107,7 +107,7 @@
     <!-- <hr /> -->
 
 
-<div class="row cta-github">  <div class="large-12 columns">  <p><span class="" id="work"> Check out my <a href="https://www.github.com/m0nica">GitHub</a> or <a href="/resume.pdf" target="_blank">view my resume</a>!</span></p></div></div>
+<div class="row cta-github">  <div class="large-12 columns">  <p><span class="" id="work"> Check out my <a href="https://www.github.com/m0nica">GitHub</a> or <a href="assets/resume.pdf" target="_blank">view my resume</a>!</span></p></div></div>
         <div class="row">
           <div class="large-12 columns">
 
