added progress bar to bottom of page to progress as page scrolls down

--- a/src/pages/index-v2.html
+++ b/src/pages/index-v2.html
@@ -48,7 +48,10 @@
   </div>
 </div>
 
-
+<div class="progressContainer">
+  <div class="progressBar">
+</div>
+</div>
 
 
 <div class="row">
@@ -132,7 +135,7 @@
     <img src="assets/img/datalogues-preview-cropped-16-9-ratio.png" class="thumbnail" alt="">
     <p class="description">A customized-<span class="skill">Jekyll</span> blog with educational <span class="skill">Jupyter notebooks</span> converted to <span class="skill">Markdown</span> to provide tutorials in <span class="skill">Python</span> with topics ranging from <span class="skill">Pandas</span> to <span class="skill">Matplotlib</span> to <span class="skill">APIs</span> to <span class="skill"> GitHub</span> and more.  </p>
 
-    <a href="#" class="button">View on Github</a>
+    <a href="#" class="button">  <i class="far fa-code"></i> View on Github</a>
     <a href="#" class="button">View Website</a>
   </div>
 
@@ -140,7 +143,7 @@
   <div class="column column-block">
     <img src="assets/img/about-monica-old-cropped-16-9-ratio.png" class="thumbnail" alt="">
         <p class="description">A fully-responsive, portfolio created with <span class="skill"> HTML</span>, <span class="skill"> CSS </span>, <span class="skill"> JavaScript </span> and <span class="skill"> PHP</span>. </p>
-          <a href="#" class="button">View on Github</a>
+          <a href="#" class="button"><i class="far fa-code"></i> View on Github</a>
           <a href="#" class="button">View Website</a>
   </div>
 
@@ -150,7 +153,7 @@
     <img src="assets/img/shiny_wordcloud-cropped-16-9-ratio.png" class="thumbnail" alt="">
 <p class="description"><span class="skill"> R Shiny</span> wordcloud of tweets collected during the 2016 U.S. Presidential Election. Part of a larger project to analyze
 over 13 million tweets during the election. </p>
-<a href="#" class="button">View on Github</a>
+<a href="#" class="button"><i class="far fa-code"></i> View on Github</a>
 
   </div>
 
