Add pdf of presentation

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -125,11 +125,18 @@
         <span class="firstcharacter">I</span> am NYC-based
         <span class="underline-flair">web developer</span> who is passionate about creating more enjoyable digital products. Currently, I am a Full Stack
         Engineer at
-        <a href="https://www.meetup.com/">Meetup</a>.
-        <span class="previousgrey">Previously, I led e-mail marketing at
-          <a href="https://www.jopwell.com">Jopwell</a>, wrangled data at
-          <a href="http://ledeprogram.com/">Columbia University's J-School</a> and founded the
-          <a href="https://athenacenter.barnard.edu/adda">Athena Digital Design Agency</a>, a student-run web development agency at Barnard College. </span>
+        <a href="https://www.meetup.com/" target="_blank">Meetup</a> and the organizer/founder of <a
+          href="https://www.meetup.com/react-ladies/" target="_blank">React Ladies</a>, a community for women and non-binary ReactJS
+        developers.
+
+        I enjoy educating and inspiring others through speaking. I've spoken at events organized by ReactJS Girls, CodeNewbie, 
+
+        Columbia University, The Flatiron School and more.
+      
+    <!--- <span class="previousgrey" >Previously, I led e-mail marketing at
+          <a href="https://www.jopwell.com" target="_blank">Jopwell</a>, wrangled data at
+          <a href="http://ledeprogram.com/" target="_blank">Columbia University's J-School</a> and founded the
+          <a href="https://athenacenter.barnard.edu/adda" target="_blank">Athena Digital Design Agency</a>, a student-run web development agency at Barnard College. </span>  -->
       </p>
 
     </div>
