--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -302,7 +302,7 @@
         </div>
       </div>
 
-      <div class="row small-up-1 medium-up-2 large-up-2">
+      <!-- <div class="row small-up-1 medium-up-2 large-up-2">
 
         <div class="column column-block">
 
@@ -321,7 +321,7 @@
           <h3>Graphic Design</h3> Promotional and branding material designed with various Adobe Creative Cloud products (e.g.,
           Adobe Photoshop, Adobe Illustrator and Adobe InDesign) and Sketch.
         </div>
-      </div>
+      </div> -->
     </div>
 
 
