update work icon and add blog to navigation

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -60,10 +60,18 @@
 
         <a href="#work">
           <div class="paradeiser_icon_canvas">
-            <i class="fal fa-rocket fa-2x"></i>
+            <i class="far fa-browser fa-2x"></i>
           </div>
           <span>Work</span>
         </a>
+
+          <a href="https://www.monica.dev" target="_blank">
+            <div class="paradeiser_icon_canvas">
+              <i class="fas fa-pencil-alt fa-2x"></i>
+            </div>
+            <span>Blog</span>
+          </a>
+
 
 
         <a href="assets/resume.pdf" target="_blank">
@@ -74,6 +82,7 @@
           <span>Resume</span>
         </a>
 
+      
         <a href="https://github.com/M0nica" target="_blank">
           <div class="paradeiser_icon_canvas">
             <i class="fab fa-github fa-2x"></i>
