--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -358,12 +358,11 @@
 
 
      $(window).on('load', function () {
-       console.log('hey')
       $(window).scroll(function () {
         var wintop = $(window).scrollTop(), docheight = $('body').height(), winheight = $(window).height();
-      console.log(wintop);
+      //console.log(wintop);
         var totalScroll = (wintop / (docheight - winheight)) * 100;
-        console.log("total scroll" + totalScroll);
+      //  console.log("total scroll" + totalScroll);
         $(".progressBar").css("width", totalScroll + "%");
       });
 
