update with wayback links

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -250,7 +250,7 @@
 
           </p>
 
-          <a href="http://www.MeghaSDesai.com" class="button">View Website</a>
+          <a href="https://web.archive.org/web/20150826021134/http://www.meghasdesai.com/" class="button">View Website</a>
         </div>
 
 
@@ -268,7 +268,7 @@
 
           <a href="https://github.com/M0nica/datalogues-refresh" class="button">
             <i class="far fa-code"></i> View on Github</a>
-          <!-- <a href="http://www.datalogues.com/" class="button">View Website</a> -->
+          <a href="https://web.archive.org/web/20190422181208/http://www.datalogues.com//" class="button">View Website</a>
         </div>
 
 
@@ -281,7 +281,7 @@
             <span class="skill"> PHP</span>. </p>
           <a href="https://github.com/M0nica/AboutMonica" class="button">
             <i class="far fa-code"></i> View on Github</a>
-          <!-- <a href="http://aboutmonica.com/previous/" class="button">View Website</a> -->
+          <a href="https://web.archive.org/web/20170915195240/http://aboutmonica.com/" class="button">View Website</a>
         </div>
 
 
