update nav + footer, add dev.to icon, move linkedin, etc.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -90,12 +90,15 @@
 
         </a>
 
-        <a href="https://twitter.com/waterproofheart" target="_blank">
-          <div class="paradeiser_icon_canvas">
-            <i class="fab fa-twitter fa-2x"></i>
-          </div>
+     
 
+        <a href="https://www.linkedin.com/in/monicampowell">
+          <div class="paradeiser_icon_canvas">
+              <i class="fab fa-linkedin-in fa-2x"></i>
+          </div>
         </a>
+
+
 
 
       </nav>
@@ -131,7 +134,7 @@
 
 
      <h1 class="text-left"> <img src="assets/img/wave.png" width="50" alt="svg of monica on computer"> Hi, I'm <span class="purple-text">Monica</span>!</h1><h2>I'm a web developer building technology to bring people
-    together. Currently, I'm a Full Stack engineer at Meetup.
+    together. Currently, I'm a Full Stack Engineer at Meetup.
      </h2>   
      
 
