reduce max image size so my face isn't huge on mobile

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -128,8 +128,7 @@
       &nbsp;
 
     </div>
-    <div class="large-2 columns t"><img src="assets/img/monica_headshot.png" alt="headshot of Monica Powell" class="headshot"></div>
-
+ 
     <div class="large-6 columns" id="header-text">
 
 
@@ -140,7 +139,10 @@
 
 
     </div>
-      <div class="large-2 columns"> &nbsp;</div>
+
+    <div class="large-2 columns"><img src="assets/img/monica_headshot.png" alt="headshot of Monica Powell"
+        class="headshot"></div>
+<div class="large-2 columns"> &nbsp;</div>
   </div>
 
 
