center headshot in column and fix h1/h2 hierarchy

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -129,7 +129,7 @@
 
     </div>
  
-    <div class="large-6 columns" id="header-text">
+    <div class="large-6 medium-6 columns" id="header-text">
 
 
      <h1 class="text-left"> <img src="assets/img/wave.png" width="50" alt="svg of monica on computer"> Hi, I'm <span class="purple-text">Monica</span>!</h1><h2>I'm a web developer building technology to bring people
@@ -140,7 +140,7 @@
 
     </div>
 
-    <div class="large-2 columns"><img src="assets/img/monica_headshot.png" alt="headshot of Monica Powell"
+    <div class="large-2 medium-2 columns "><img src="assets/img/monica_headshot.png" alt="headshot of Monica Powell"
         class="headshot"></div>
 <div class="large-2 columns"> &nbsp;</div>
   </div>
